<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:textSize="18sp"
        android:text="@string/notesHeader"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toTopOf="@id/tvUpNext"
        android:overScrollMode="always">
        <TextView
            android:id="@+id/tvNotes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:text="@string/notes" />

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tvUpNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textSize="12sp"
        android:text="@string/up_next"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/next_button"
        app:layout_constraintBottom_toTopOf="@id/next_button"
        />
    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon = "@drawable/baseline_arrow_forward_ios"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/blue"
        android:gravity="start"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="30dp"
        app:iconGravity = "end"
        android:text="@string/tvNext"
        />

</androidx.constraintlayout.widget.ConstraintLayout>