<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_button"

        android:text="@string/num_questions" />


    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/question_australia"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/question_background"
       app:layout_constraintTop_toBottomOf="@id/progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/answer1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/question_text_view"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        tools:text="Answer A" />

    <Button
        android:id="@+id/answer2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/answer1_button"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        tools:text="Answer B"/>

    <Button
        android:id="@+id/answer3_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/answer2_button"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        tools:text="Answer C"/>

    <Button
        android:id="@+id/answer4_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/answer3_button"
        android:layout_marginTop="15dp"
        tools:text="Answer D"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        />




    <Button
        android:id="@+id/check_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_button"

        android:text="@string/check_answer" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/baseline_arrow_forward_ios"
        app:iconGravity="textEnd"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="@id/check_answer_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/check_answer_button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>